--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,7 @@
 name: thething
-channels:
-  - conda-forge
 dependencies:
-  - numpy
-  - face-recognition
-  - pickleshare
-  - Pillow
-  - streamlit
+  - numpy=1.24.3
+  - face-recognition=1.3.0
+  - pickleshare=0.7.5
+  - Pillow=9.5.0
+  - streamlit=1.23.1
