--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 name: thething
+channels:
+  - conda-forge
 dependencies:
   - numpy
-  # - face-recognition
+  - face-recognition
   - pickleshare
   - Pillow
   - streamlit
